--- a/.gitignore
+++ b/.gitignore
@@ -87,4 +87,14 @@ tests/kr_scaletest
 lib/krad_web/res/kr_api.js.h
 lib/krad_web/res/kr_dev_interface.js.h
 lib/krad_web/res/kr_interface.js.h
-
+INSTALL
+Makefile.in
+NEWS
+aclocal.m4
+autom4te.cache/
+compile
+config.h.in
+config.log
+configure
+install-sh
+missing
