more configure.ac fun

--- a/configure.ac
+++ b/configure.ac
@@ -26,25 +26,32 @@ AC_CHECK_LIB(m, sin, [], AC_MSG_ERROR([library m not found]))
 AC_CHECK_LIB(dl, dlopen, [], AC_MSG_ERROR([library dl not found]))
 AC_CHECK_LIB(z, compress, [], AC_MSG_ERROR([library z not found]))
 AC_CHECK_LIB(pthread, pthread_create, [], AC_MSG_ERROR([pthread not found]))
-AC_CHECK_LIB(turbojpeg, tjInitDecompress,
- [], AC_MSG_ERROR([turbojpeg not found]))
+AC_CHECK_LIB(rt, clock_gettime, [], AC_MSG_ERROR([library rt not found]))
+AC_CHECK_LIB(turbojpeg, tjInitDecompress, [], [])
+AC_CHECK_LIB(gif, DGifOpenFileName, [], [])
 
-PKG_CHECK_MODULES([ncurses], [ncurses,panel,menu,form])
-PKG_CHECK_MODULES([ALSA], [alsa])
+PKG_CHECK_MODULES([HOBGOBLINFIRECAKE], [hobgoblinfirecake],
+   [AC_DEFINE([HAVE_HOBGOBLINFIRECAKE], [1], [Use HOBGOBLINFIRECAKE])],
+   [PKG_CHECK_MODULES([ALSA], [alsa],
+       [AC_DEFINE([HAVE_ALSA], [1], [Use ALSA])
+    ])
+])
 PKG_CHECK_MODULES([JACK], [jack])
-PKG_CHECK_MODULES([XMMS2], [xmms2-client])
-PKG_CHECK_MODULES([Theora], [theora,theoraenc,theoradec])
-PKG_CHECK_MODULES([Vorbis], [vorbis,vorbisenc])
+PKG_CHECK_MODULES([OPUS], [opus])
+PKG_CHECK_MODULES([VORBIS], [vorbis,vorbisenc])
 PKG_CHECK_MODULES([FLAC], [flac])
+PKG_CHECK_MODULES([THEORA], [theora,theoraenc,theoradec])
 PKG_CHECK_MODULES([VPX], [vpx])
-PKG_CHECK_MODULES([Secret_Rabbit_Code], [samplerate])
-PKG_CHECK_MODULES([software_scaler], [libswscale])
-PKG_CHECK_MODULES([avutil], [libavutil])
-PKG_CHECK_MODULES([Freetype_2], [freetype2])
-PKG_CHECK_MODULES([Cairo], [cairo,cairo-ft])
-PKG_CHECK_MODULES([Wayland], [wayland-client])
-PKG_CHECK_MODULES([xkbcommon], [xkbcommon])
+PKG_CHECK_MODULES([SAMPLERATE], [samplerate])
+PKG_CHECK_MODULES([LIBSWSCALE], [libswscale])
+PKG_CHECK_MODULES([AVUTIL], [libavutil])
+PKG_CHECK_MODULES([FREETYPE2], [freetype2])
+PKG_CHECK_MODULES([CAIRO], [cairo,cairo-ft])
+PKG_CHECK_MODULES([NCURSES], [ncurses,panel,menu,form])
+PKG_CHECK_MODULES([XKBCOMMON], [xkbcommon])
+PKG_CHECK_MODULES([WAYLAND], [wayland-client])
 PKG_CHECK_MODULES([X11], [x11,x11-xcb,xcb-image,xcb-shm])
+PKG_CHECK_MODULES([XMMS2], [xmms2-client])
 
 # AC_CONFIG_SUBDIRS([lib/krad_vhs/ext/imagezero])
 AC_CONFIG_FILES([Makefile])
