--- a/.gitignore
+++ b/.gitignore
@@ -102,4 +102,13 @@ Makefile
 config.h
 config.status
 stamp-h1
-
+config.guess
+config.sub
+libtool
+ltmain.sh
+depcomp
+*.deps
+*.libs
+*.dirstamp
+*.lo
+*.la
