--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,6 @@ waf
 *.mkv*
 tools/krad_decklink/krad_decklink_capture.a
 krad_ebml_header_test
-tools/krad_web/res/krad_radio.html.h
-tools/krad_web/res/krad_radio.js.h
-lib/krad_web/res/krad_radio.html.h
-lib/krad_web/res/krad_radio.js.h
 krad_apps/krad_radio
 krad_apps/krad_radio_cmd
 krad_apps/krad_radio_gtk
@@ -84,9 +80,8 @@ tests/kr_terminfo
 tests/kr_launcher
 lib/krad_rc/krad_rc_sdl_joy_control
 tests/kr_scaletest
-lib/krad_web/res/kr_api.js.h
-lib/krad_web/res/kr_dev_interface.js.h
-lib/krad_web/res/kr_interface.js.h
+lib/krad_web/core/*.h
+lib/krad_web/rack/*.h
 INSTALL
 Makefile.in
 NEWS
