adding an rtc rack unit; uses kr for signalling and rtc does the rest peer-to-peer.  It works ff to ff and chrome to chrome, but not ff to chrome

--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -53,5 +53,5 @@ AM_CPPFLAGS = \
 
 krad_radio_SOURCES = krad_radio.c
 krad_radio_CFLAGS = $(XKBCOMMON_CFLAGS) $(X11_CFLAGS) $(CAIRO_CFLAGS) $(OPUS_CFLAGS) $(XMMS2_CFLAGS)
-krad_radio_LDFLAGS = ../lib/krad_radio/libkradclient.la ../lib/krad_radio/libkradradio.la
+krad_radio_LDFLAGS = ../lib/krad_radio/libkradclient.la ../lib/krad_radio/libkradradio.la /usr/lib/x86_64-linux-gnu/libturbojpeg.a 
 krad_radio_CFLAGS += -DKR_GIT_VERSION=\"$(KR_GIT_VERSION)\"
