add new codegen tools

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,6 @@ tests/dir
 tools/code/hextool/hextool
 lib/krad_web/embed.h
 tests/kr_cbor_test
+tools/code/analysis/gather_structs/gather_tool
+tools/code/gen/codegen
+tools/code/gen/codegen_bootstrap
