--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,2 @@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = lib daemon clients tests
+SUBDIRS = tools/code/hextool tools/code/analysis/gather_structs tools/code/gen lib daemon clients tests
