--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,4 @@
+include $(top_srcdir)/common.mk
+
 ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = tools/code/hextool tools/code/analysis/gather_structs tools/code/gen lib daemon clients tests
