imporove and compile v4l2 test

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,10 +6,19 @@ if HAVE_WAYLAND
   bin_PROGRAMS += kr_wayland_test
 endif
 
+if LINUX
+  bin_PROGRAMS += kr_v4l2_test
+endif
+
 kr_cbor_test_SOURCES = kr_cbor_test.c
 kr_cbor_test_SOURCES += ../lib/krad_cbor/krad_cbor.c
 kr_cbor_test_CFLAGS =
 kr_cbor_test_LDFLAGS =
+
+kr_v4l2_test_SOURCES = kr_v4l2_test.c
+kr_v4l2_test_SOURCES += ../lib/krad_v4l2/krad_v4l2.c ../lib/krad_system/krad_system.c
+kr_v4l2_test_CFLAGS = -pthread 
+kr_v4l2_test_LDFLAGS = -lm
 
 kr_wayland_test_SOURCES = kr_wayland_test.c
 kr_wayland_test_SOURCES += ../lib/krad_wayland/krad_wayland.c
