codegen mega merge

--- a/.gitignore
+++ b/.gitignore
@@ -117,9 +117,20 @@ kr
 krad_radio
 tests/dir
 tools/code/hextool/hextool
-lib/krad_web/embed.h
+tools/code/analysis/gather_structs/gather_tool
+tools/code/analysis/sizeof_util/sizeof_util
+tools/code/gen/codegen_bootstrap
+tools/code/gen/out.c
+tools/code/gen/out.h
+tools/code/gen/bootstrapped.h
+tools/code/gen/bootstrapped.c
+tools/code/gen/codegen
+tools/code/gen/main_test
+tools/code/gen/gen
 tests/kr_cbor_test
 tools/code/analysis/gather_structs/gather_tool
 tools/code/gen/codegen
+tools/code/gen/codegen_auto
 tools/code/gen/codegen_bootstrap
+tools/code/gen/test
 tests/kr_wayland_test
