--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = tools/code/hextool tools/code/analysis/gather_structs tools/code/gen lib daemon clients tests
+if KR_IZ_US
+  KR_DEV_TOOLS = tools/code/hextool tools/code/analysis/gather_structs tools/code/gen tests
+endif
+SUBDIRS = $(KR_DEV_TOOLS) . lib daemon clients
+
