--- a/tools/code/hextool/Makefile.am
+++ b/tools/code/hextool/Makefile.am
@@ -1,4 +1,4 @@
 include $(top_srcdir)/common.mk
-
-bin_PROGRAMS = hextool
+noinst_PROGRAMS = hextool
+hextool_LDFLAGS = -no-install
 hextool_SOURCES = hexutils.c hextool.c
