--- a/tools/code/analysis/gather_structs/Makefile.am
+++ b/tools/code/analysis/gather_structs/Makefile.am
@@ -1,2 +1,3 @@
-bin_PROGRAMS = gather_tool
+noinst_PROGRAMS = gather_tool
+gather_tool_LDFLAGS = -no-install
 gather_tool_SOURCES = structs_gathering.c gather_tool.c
