--- a/configure.ac
+++ b/configure.ac
@@ -22,15 +22,6 @@ AC_SUBST(KR_GIT_VERSION, m4_esyscmd([git describe --tags]))
 CFLAGS="-g -Wall $CFLAGS"
 CXXFLAGS="-g -Wall -Wno-write-strings $CXXFLAGS"
 
-AC_ARG_ENABLE([optimize],
-  AS_HELP_STRING([--enable-optimize], [Enable -O3]),,
-  enable_optimize=no)
-
-AS_IF([test "$enable_optimize" = "yes"], [
-  CFLAGS="-O3 $CFLAGS"
-  CXXFLAGS="-O3 $CXXFLAGS"
-])
-
 case $host in
   *-linux*)
   AM_CONDITIONAL(LINUX, true)
@@ -38,11 +29,24 @@ case $host in
   CXXFLAGS="-DKR_LINUX $CXXFLAGS"
 esac
 
+AC_ARG_ENABLE([optimize], AS_HELP_STRING([--enable-optimize], [Enable Optimize]),
+ [optimize=yes], [optimize=no])
+AS_IF([test "$optimize" = "yes"], [
+  CFLAGS="-O3 $CFLAGS"
+  CXXFLAGS="-O3 $CXXFLAGS"
+])
+
 AC_ARG_ENABLE([dev], AS_HELP_STRING([--enable-dev], [Enable developer tools]),
  [dev=yes], [dev=no])
 AS_IF([test "$dev" = "yes"],
  [AC_DEFINE([KR_IZ_US], [1], [Enable developer tools])])
 AM_CONDITIONAL([KR_IZ_US], [test "$dev" = "yes"])
+
+AC_ARG_ENABLE([tools], AS_HELP_STRING([--enable-tools], [Enable tools]),
+ [tools=yes], [tools=no])
+AS_IF([test "$tools" = "yes"],
+ [AC_DEFINE([KR_ENABLE_TOOLS], [1], [Enable tools])])
+AM_CONDITIONAL([KR_ENABLE_TOOLS], [test "$tools" = "yes"])
 
 AC_CHECK_LIB([m], [dl], [z], [pthread], [rt])
 
@@ -87,7 +91,7 @@ AC_PROG_CXX
 AC_CONFIG_FILES([Makefile lib/Makefile daemon/Makefile clients/Makefile
                  tests/Makefile tools/code/hextool/Makefile
                  tools/code/analysis/gather_structs/Makefile
-                 tools/code/gen/Makefile])
+                 tools/code/gen/Makefile tools/Makefile])
 
 AC_OUTPUT
 
@@ -95,6 +99,8 @@ AC_MSG_RESULT([
 ------------------------------------------------------------------------
   $PACKAGE_NAME $PACKAGE_VERSION: Configuration Valid.
   CFLAGS: $CFLAGS
+      Tools: $tools
+   Optimize: $optimize
   Developer: $dev
 ------------------------------------------------------------------------
 ])
