--- a/configure.ac
+++ b/configure.ac
@@ -19,7 +19,7 @@ AC_SUBST(KR_LT_AGE)
 
 AC_SUBST(KR_GIT_VERSION, m4_esyscmd([git describe --tags]))
 
-CFLAGS="-g -Wall $CFLAGS"
+CFLAGS="-Wall $CFLAGS"
 CXXFLAGS="-g -Wall -Wno-write-strings $CXXFLAGS"
 
 case $host in
@@ -32,8 +32,8 @@ esac
 AC_ARG_ENABLE([optimize], AS_HELP_STRING([--enable-optimize], [Enable Optimize]),
  [optimize=yes], [optimize=no])
 AS_IF([test "$optimize" = "yes"], [
-  CFLAGS="-O3 $CFLAGS"
-  CXXFLAGS="-O3 $CXXFLAGS"
+  CFLAGS="$CFLAGS -O3 -mtune=native"
+  CXXFLAGS="$CXXFLAGS -O3 -mtune=native"
 ])
 
 AC_ARG_ENABLE([dev], AS_HELP_STRING([--enable-dev], [Enable developer tools]),
@@ -48,7 +48,11 @@ AS_IF([test "$tools" = "yes"],
  [AC_DEFINE([KR_ENABLE_TOOLS], [1], [Enable tools])])
 AM_CONDITIONAL([KR_ENABLE_TOOLS], [test "$tools" = "yes"])
 
-AC_CHECK_LIB([m], [dl], [z], [pthread], [rt])
+AC_CHECK_LIB(dl, dlopen)
+AC_CHECK_LIB(m, pow)
+AC_CHECK_LIB(pthread, pthread_create)
+AC_CHECK_LIB(rt, clock_nanosleep)
+AC_CHECK_LIB(z, deflate)
 
 AC_CHECK_LIB(turbojpeg, tjInitDecompress,
  [AM_CONDITIONAL([HAVE_TURBOJPEG], true)],
