--- a/.gitignore
+++ b/.gitignore
@@ -133,5 +133,6 @@ tools/code/gen/codegen
 tools/code/gen/codegen_auto
 tools/code/gen/codegen_bootstrap
 tools/code/gen/test
-tests/kr_wayland_test
 tools/kr_dl_stream
+tools/kr_v4l2_stream
+tests/kr_wayland_test
