only compile example client if --enable-dev

--- a/clients/Makefile.am
+++ b/clients/Makefile.am
@@ -1,7 +1,10 @@
 include $(top_srcdir)/common.mk
 
 bin_PROGRAMS = kr
+
+if KR_IZ_US
 noinst_PROGRAMS = kr_example_client
+endif
 
 kr_SOURCES = kr.c
 kr_CFLAGS = $(OPUS_CFLAGS)
